(Not yet implemented) Switched UTF-8 to use StandardCharsets.UTF_8